# cmake_cxx_submodule

./: .clang-format  .gitignore  .ignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  minsize-build.sh  minsized-release.sh  quick-commit.sh  reformat.sh
cmake/: CXX17Enforce.cmake  GNU99Enforce.cmake  SubModule.cmake  libtemplate.pc.in
include/example/: add.h  sub.h
inner/include/example_inner/: add.h
inner/lib/example_add/: add.cc  add_one.cc
lib/add/: add.cc
lib/example_add/: add_one.cc
lib/example_sub/: sub.cc
